[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/subsquid/rpc-evm-state"

[workspace.dependencies]
# EVM
alloy-primitives = { version = "1", features = ["serde"] }
revm = "24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP / async
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["cors"] }

# HTTP client
ureq = { version = "3", features = ["json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "zstd", "rustls-tls"] }
lru = "0.14"
futures = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Internal crates
evm-state-common = { path = "crates/common" }
evm-state-data-types = { path = "crates/data-types" }
evm-state-db = { path = "crates/state-db" }
evm-state-chain-spec = { path = "crates/chain-spec" }
evm-state-api = { path = "crates/api" }
evm-state-client = { path = "crates/client" }
evm-state-sqd-fetcher = { path = "crates/sqd-fetcher" }
