[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/subsquid/rpc-evm-state"

[workspace.dependencies]
# EVM
alloy-primitives = { version = "1", features = ["serde"] }
alloy-sol-types = "1"
revm = "24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP / async
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["cors"] }

# HTTP client
ureq = { version = "3", features = ["json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "zstd", "rustls-tls"] }
lru = "0.14"
futures = "0.3"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Request", "RequestInit", "Response", "Headers"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.3", features = ["wasm_js"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Compression
zstd = "0.13"

# Error handling
thiserror = "2"
anyhow = "1"

# Internal crates
evm-state-common = { path = "crates/common" }
evm-state-data-types = { path = "crates/data-types" }
evm-state-db = { path = "crates/state-db" }
evm-state-chain-spec = { path = "crates/chain-spec" }
evm-state-api = { path = "crates/api" }
evm-state-replayer = { path = "crates/replayer" }
evm-state-client = { path = "crates/client" }
evm-state-sqd-fetcher = { path = "crates/sqd-fetcher" }
evm-state-snapshot = { path = "crates/snapshot" }
evm-state-validation = { path = "crates/validation" }
evm-state-client-wasm = { path = "crates/client-wasm" }
evm-state-bench = { path = "crates/bench" }
evm-state-cli = { path = "crates/cli" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
