[package]
name = "evm-state-api"
version = "0.1.0"
edition.workspace = true

[dependencies]
evm-state-db = { workspace = true }
evm-state-common = { workspace = true }
evm-state-chain-spec = { workspace = true }
alloy-primitives = { workspace = true }
revm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
http-body-util = "0.1"
tower = "0.5"
