[package]
name = "evm-state-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "evm-state"
path = "src/main.rs"

[dependencies]
evm-state-db = { workspace = true }
evm-state-api = { workspace = true }
evm-state-chain-spec = { workspace = true }
evm-state-replayer = { workspace = true }
evm-state-sqd-fetcher = { workspace = true }
evm-state-snapshot = { workspace = true }
evm-state-common = { workspace = true }
evm-state-validation = { workspace = true }
evm-state-metrics = { workspace = true }

alloy-primitives = { workspace = true }
axum = { workspace = true }
hex = "0.4"
indicatif = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
