[package]
name = "evm-state-client"
version = "0.1.0"
edition.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
revm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }
lru = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
evm-state-db = { workspace = true }
evm-state-common = { workspace = true }
evm-state-chain-spec = { workspace = true }
evm-state-api = { workspace = true }
axum = { workspace = true }
tempfile = "3"
