[package]
name = "evm-state-metrics"
version = "0.1.0"
edition.workspace = true

[dependencies]
evm-state-db = { workspace = true }
evm-state-common = { workspace = true }
alloy-primitives = { workspace = true }
revm = { workspace = true }
prometheus = { workspace = true }
axum = { workspace = true }
