[package]
name = "evm-state-snapshot"
version = "0.1.0"
edition.workspace = true

[dependencies]
evm-state-db = { workspace = true }
evm-state-common = { workspace = true }
alloy-primitives = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
tempfile = "3"
