[package]
name = "evm-state-sqd-fetcher"
version = "0.1.0"
edition.workspace = true

[dependencies]
evm-state-data-types = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
