[package]
name = "evm-state-db"
version = "0.1.0"
edition.workspace = true

[dependencies]
evm-state-common = { workspace = true }
alloy-primitives = { workspace = true }
revm = { workspace = true }
thiserror = { workspace = true }
rocksdb = { version = "0.22", default-features = false, features = ["zstd"] }

[dev-dependencies]
tempfile = "3"
